namespace foll_backend.Care.Interfaces.REST.Resources;

public record AssignGuardShiftResource(long NewCurrentGuardianUserId);
