namespace foll_backend.Care.Interfaces.REST.Resources;

public record CreateInvitationResource(short RelationshipTypeId);
